fixed output box alignment to left side

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html, body, [class*="css"] {
     border-radius: 12px;
     margin: 10px 0;
     border-left: 5px solid #38bdf8;
-    font-weight: 500;
+    font-weight: 200;
 }
 
 /* ---------------- OUTPUT ---------------- */
@@ -81,8 +81,8 @@ html, body, [class*="css"] {
     border-radius: 16px;
     border-left: 6px solid #22c55e;
     box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-    margin-left:auto;
-    margin-right:0;
+    margin-left: 0;
+    margin-right: auto;
     width: 50%;
 }
 
